# CMOR438-Project

./: .gitignore  ML_ENGINEERING.md  README.md  pyproject.toml  test.py
.github/workflows/: ci.yml
Data_Science_and_Machine_Learning_Spring_2022/Lecture_7/: Lecture_7_1.ipynb
Data_Science_and_Machine_Learning_Spring_2022/Lecture_9/: Lecture_9_1.ipynb
Supervised Machine Learning/: README.md
Supervised Machine Learning/1. Regression/1. Linear Regression/: Linear Regression.ipynb  README.md
Supervised Machine Learning/1. Regression/2. Gradient Descent/: Gradient Descent.ipynb  README.md
Supervised Machine Learning/1. Regression/3. SVM Regression/: README.md  SVM Regression.ipynb
Supervised Machine Learning/1. Regression/4. Regression Tree/: README.md  Regression Tree.ipynb
Supervised Machine Learning/2. Classification/1. Perceptron/: Perceptron.ipynb
Unsupervised Machine Learning/1. PCA/: PCA.ipynb  README.md
Unsupervised Machine Learning/2. K-Means/: K-Means.ipynb
Unsupervised Machine Learning/3. DBSCAN/: DBSCAN.ipynb  README.md
notebooks/: README.md
notebooks/Supervised Machine Learning/: README.md
notebooks/Unsupervised Machine Learning/: README.md
src/rice_ml/: README.md
src/rice_ml/measures/: __init__.py
tests/: README.md  conftest.py  test_dbscan.py  test_decision_tree.py  test_distance_metrics.py  test_ensemble.py  test_kmeans.py  test_knn.py  test_linear_regression.py  test_logistic_regression.py  test_measures.py  test_mlp.py  test_pca.py  test_perceptron.py  test_preprocessing.py  test_random_forest.py  test_regression_tree.py
(+54 files in other folders)
