[project]
name = "rice-ml"
version = "0.1.0"
description = "CMOR 438 - Machine Learning course project"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "mlxtend",
    "tensorflow",
    "jupyter",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["src"]
