[project]
name = "rice-ml"
version = "0.1.0"
description = "CMOR 438 - Machine Learning course project"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "mlxtend",
    "tensorflow",
    "jupyter",
]

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
